<resources>
    <string name="app_name">OptimizeMe</string>
    <string name="action_settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="task">Completed task</string>
    <string name="pomodoro">Completed pomodoro</string>
    <string name="status">Status</string>
    <string name="status_progress">Task in progress</string>
    <string name="status_pause">In pause</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="timer_task">00:00</string>

    <string name="settings_timer_task">Timer task in minutes</string>
    <string name="settings_timer_short_break">Timer short break in minutes</string>
    <string name="settings_timer_long_break">Timer long break in minutes</string>
    <string name="version" translatable="false">0.1 (alpha)</string>
    <string name="preferences_version">Version</string>

</resources>
